<resources>
    <string name="app_name">Svečani Trenutak</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Svečani Trenutak</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Svečani Trenutak</string>
    <string name="action_settings">Podešavanja</string>

    <string name="K_1">Muzika</string>
    <string name="K_2">Svečane sale/Restorani</string>
    <string name="K_3">Dekoracija i specijalni efekti</string>
    <string name="K_4">Foto/Video</string>
    <string name="K_5">Lepota</string>
    <string name="K_6">Burme/Nakit</string>
    <string name="K_7">Torte/Slatkiši</string>
    <string name="K_8">Ketering</string>
    <string name="K_9">Pića</string>
    <string name="K_10">Venčanice/Svečane haljine</string>
    <string name="K_11">Muška i dečija odela</string>
    <string name="K_12">Aksesoar</string>
    <string name="K_13">Obuća</string>
    <string name="K_14">Pozivnice/Štampa</string>
    <string name="K_15">Šatori/Paviljoni</string>
    <string name="K_16">Prevoz</string>
    <string name="K_17">Prenoćište za goste</string>
    <string name="K_18">Časovi plesa</string>
    <string name="K_19">Igraonice</string>
    <string name="K_20">Animacija</string>
    <string name="K_21">Osoblje</string>
    <string name="K_22">Poklončići</string>
    <string name="K_23">Organizatori proslave</string>
    <string name="K_24">Ostalo</string>

    <string name="sub11">Muzika - Bendovi/Orkestri</string>
    <string name="sub12">Muzika - DJ-evi</string>
    <string name="sub13">Muzika - Pevači</string>
    <string name="sub14">Muzika - Tamburaši/Akustičari</string>
    <string name="sub15">Muzika - Trubači</string>

    <string name="sub51">Lepota - Frizura</string>
    <string name="sub52">Lepota - Makeup</string>
    <string name="sub53">Lepota - Nokti</string>
    <string name="sub54">Lepota - Studio lepote</string>

    <string-array name="Muzika">
        <item>Muzika - Bendovi/Orkestri</item>
        <item>Muzika - DJ-evi</item>
        <item>Muzika - Pevači</item>
        <item>Muzika - Tamburaši/Akustičari</item>
        <item>Muzika - Trubači</item>
    </string-array>

    <string-array name="Lepota">
        <item>Lepota - Frizura</item>
        <item>Lepota - Makeup</item>
        <item>Lepota - Nokti</item>
        <item>Lepota - Studio lepote</item>
    </string-array>

    <string name="title_activity_log_in">Prijava</string>
    <string name="title_activity_register">Kreiranje Novog Naloga</string>
    <string name="title_activity_new_ad">Postavite Oglas</string>
    <string name="title_activity_about_us">O Nama</string>
    <string name="title_activity_contact">Kontakt</string>
    <string name="title_activity_follow">Pratite Nas</string>
    <string name="title_activity_share">Podelite</string>

    <string name="aboutus1">Ideja o izradi ove aplikacije (sajta) proistekla je od nemogućnosti pronalaženja svega potrebnog za veselje.
        Odlazak na mnogo mesta, ispisanih papira, podsetnika, adresa i brojeva telefona veliki je zamor za buduće mladence,
        ljude koji organizuju dečije rođendane, krštenja ili pak neke druge proslave.</string>
    <string name="aboutus2">Ovde imate sve na jednom mestu, samo par koraka na Vašem telefonu, tabletu, računaru i sve potrebne informacije o salama,
        restoranima, muzici, salonima venčanica i svemu ostalom su pred Vama. Olakšajte pripremu Vaše proslave i u njoj uživajte uz nas.</string>
    <string name="aboutus3">Vaš Svečani trenutak</string>

    <string name="contact1">E-mail: svecanitrenutak@gmail.com</string>

    <string-array name="categories">
        <item>Muzika - Bendovi/Orkestri</item>
        <item>Muzika - DJ-evi</item>
        <item>Muzika - Pevači</item>
        <item>Muzika - Tamburaši/Akustičari</item>
        <item>Muzika - Trubači</item>
        <item>Svečane sale/restorani</item>
        <item>Dekoracija i specijalni efekti</item>
        <item>Foto/Video</item>
        <item>Lepota - Frizura</item>
        <item>Lepota - Makeup</item>
        <item>Lepota - Nokti</item>
        <item>Lepota - Studio lepote</item>
        <item>Burme/Nakit</item>
        <item>Torte/Slatkiši</item>
        <item>Ketering</item>
        <item>Pića</item>
        <item>Venčanice/Svečane haljine</item>
        <item>Muška i dečija odela</item>
        <item>Aksesoar</item>
        <item>Obuća</item>
        <item>Pozivnice/Štampa</item>
        <item>Šatori/Paviljoni</item>
        <item>Prevoz</item>
        <item>Prenoćište za goste</item>
        <item>Časovi plesa</item>
        <item>Igraonice</item>
        <item>Animacija</item>
        <item>Osoblje</item>
        <item>Poklončići</item>
        <item>Organizatori proslave</item>
        <item>Ostalo</item>
    </string-array>

    <string name="title_activity_list_of_ads">ListOfAdsActivity</string>
    <string name="title_activity_view_ad">ViewAdActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="share_text">Za vaše proslave: https://play.google.com/store/apps/details?id=com.ephoenixdev.svecanitrenutak</string>

    <string name="facebook_link_app">https://www.facebook.com/PhoenixInerFire</string>
    <string name="instagram_link_app">https://www.instagram.com/markokarajlovic</string>
    <string name="twitter_link_app"></string>

    <string name="action_example">Example action</string>
    <string name="title_activity_categories">Kategorije</string>
    <string name="title_activity_profile">Moj Profil</string>

    <string name="main_1">Dobrodošli!</string>
    <string name="main_2">Pravite malo ili veliko veselje? Na pravom ste mestu! 👍 Tu smo da Vam pomognemo u pronalaženju svega neophodnog za taj radostan dan. </string>
    <string name="main_3">Uživajte u Vašem "Svečanom trenutku!</string>
    <string name="nemate_nalog">Nemate Nalog</string>
    <string name="prijavite_se">Prijavite se</string>
    <string name="lozinka">Lozinka</string>
    <string name="e_mail">E-Mail</string>
    <string name="ulogujte_se_sa_facebook">Ulogujte se sa Facebook</string>
    <string name="ulogujte_se_sa_google">Ulogujte se sa Google</string>
    <string name="neispravna_lozinka_mail">Neispravan e-mail ili lozinka!</string>
    <string name="izaberite_profilnu_sliku">Izaberite profilnu sliku</string>
    <string name="registrujte_se">Registrujte se</string>
    <string name="vec_imate_nalog">Već Imate Nalog</string>
    <string name="telefon">Telefon</string>
    <string name="registrujte_sa_google">Registrujte sa Google</string>
    <string name="registrujte_sa_facebook">Registrujte sa Facebook</string>
    <string name="izaberite_sliku">Izaberite Sliku</string>
    <string name="naslov_oglasa">Naslov Oglasa</string>
    <string name="opis">Opis</string>
    <string name="mesto">Mesto</string>
    <string name="adresa">Adresa</string>
    <string name="youtube_link">YouTube Link</string>
    <string name="instagram">Instagram</string>
    <string name="facebook_link">Facebook Link</string>
    <string name="web_site">Web Site</string>
    <string name="postavite_oglas">Postavite Oglas</string>
    <string name="ponovite_lozinku">Ponovite lozinku</string>
    <string name="promenite_lozinku">Promenite lozinku</string>
    <string name="potvrdite_promene">Potvrdite promene</string>
    <string name="promenite_sliku">Promenite sliku</string>
    <string name="moji_oglasi">Moji Oglasi</string>
    <string name="main_4">Aplikacija je u konstantom razvoju, za sve sugestije i primedbe molim Vas pišite nam na: svecanitrenutak@gmail.com</string>
</resources>