<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/nav_header_vertical_spacing"
    android:visibility="visible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LogInActivity">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/inputLayoutLogInEmail">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextLogInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/nav_header_vertical_spacing"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/inputLayoutLogInPassword"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextLogInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/nav_header_vertical_spacing"
            android:hint="@string/lozinka"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textViewLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonLogInOK"
        style="@style/ButtonThemeOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/nav_header_vertical_spacing"
        android:text="@string/prijavite_se" />

    <ProgressBar
        android:id="@+id/progressBarLogIn"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <Button
        android:visibility="gone"
        android:id="@+id/buttonLogInWithFacebook"
        style="@style/ButtonThemeFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/nav_header_vertical_spacing"
        android:text="@string/ulogujte_se_sa_facebook" />

    <Button
        android:visibility="gone"
        android:id="@+id/buttonLogInWithGoogle"
        style="@style/ButtonThemeGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/nav_header_vertical_spacing"
        android:text="@string/ulogujte_se_sa_google" />

    <Button
        android:id="@+id/buttonLogInRegister"
        style="@style/ButtonThemeNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/nav_header_vertical_spacing"
        android:text="@string/nemate_nalog" />

</LinearLayout>